[package]
name = "reconfig"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0", optional = true }
serde_yaml = { version = "=0.9.34", optional = true }
toml = { version = "~0.8", optional = true }

[features]
default = ["json"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]
toml = ["dep:toml"]
hot_reload = []
cron = []
full = ["json", "yaml", "toml", "hot_reload"]
